// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`DOM snapshots SLDSPillContainer Bare Pill Container 1`] = `
<div
  className="slds-p-around_medium"
>
  <div>
    <div
      className="slds-p-vertical_medium"
    >
      <h3
        className="slds-text-heading_small"
      >
        Static Examples
      </h3>
    </div>
    <div
      className="slds-grid slds-grid_vertical-align-start"
    >
      <div
        className="slds-pill_container"
        id="bare-pill-container-listbox-of-pill-options"
      >
        <ul
          aria-label="Selected Options:"
          aria-orientation="horizontal"
          className="slds-listbox slds-listbox_horizontal slds-p-top_xxx-small"
          role="listbox"
        >
          <li
            className="slds-listbox__item"
            role="presentation"
          >
            <span
              aria-selected="true"
              className="slds-pill slds-pill_bare"
              onBlur={[Function]}
              onClick={[Function]}
              onFocus={[Function]}
              onKeyDown={[Function]}
              role="option"
              tabIndex="0"
            >
              <span
                className="slds-pill__label"
                title="Full pill label verbiage mirrored here"
              >
                Pill Label 1
              </span>
              <span
                className="slds-icon_container slds-pill__remove"
                onClick={[Function]}
                role="button"
                title="Remove"
              >
                <svg
                  className="slds-icon slds-icon_x-small slds-icon-text-default"
                  style={
                    Object {
                      "cursor": "pointer",
                    }
                  }
                >
                  <use
                    href="/assets/icons/utility-sprite/svg/symbols.svg#close"
                  />
                </svg>
                <span
                  className="slds-assistive-text"
                >
                  Press delete or backspace to remove
                </span>
              </span>
            </span>
          </li>
          <li
            className="slds-listbox__item"
            role="presentation"
          >
            <span
              aria-selected="true"
              className="slds-pill slds-pill_bare"
              onBlur={[Function]}
              onClick={[Function]}
              onFocus={[Function]}
              onKeyDown={[Function]}
              role="option"
              tabIndex={-1}
            >
              <span
                className="slds-pill__label"
                title="Full pill label verbiage mirrored here"
              >
                Pill Label 2
              </span>
              <span
                className="slds-icon_container slds-pill__remove"
                onClick={[Function]}
                role="button"
                title="Remove"
              >
                <svg
                  className="slds-icon slds-icon_x-small slds-icon-text-default"
                  style={
                    Object {
                      "cursor": "pointer",
                    }
                  }
                >
                  <use
                    href="/assets/icons/utility-sprite/svg/symbols.svg#close"
                  />
                </svg>
                <span
                  className="slds-assistive-text"
                >
                  Press delete or backspace to remove
                </span>
              </span>
            </span>
          </li>
        </ul>
      </div>
    </div>
  </div>
</div>
`;

exports[`DOM snapshots SLDSPillContainer Base Pill Container 1`] = `
<div
  className="slds-p-around_medium"
>
  <div>
    <div
      className="slds-p-vertical_medium"
    >
      <h3
        className="slds-text-heading_small"
      >
        Static Examples
      </h3>
    </div>
    <div
      className="slds-grid slds-grid_vertical-align-start"
    >
      <div
        className="slds-pill_container"
        id="base-pill-container-listbox-of-pill-options"
      >
        <ul
          aria-label="Selected Options:"
          aria-orientation="horizontal"
          className="slds-listbox slds-listbox_horizontal slds-p-top_xxx-small"
          role="listbox"
        >
          <li
            className="slds-listbox__item"
            role="presentation"
          >
            <span
              aria-selected="true"
              className="slds-pill"
              onBlur={[Function]}
              onClick={[Function]}
              onFocus={[Function]}
              onKeyDown={[Function]}
              role="option"
              tabIndex="0"
            >
              <span
                className="slds-pill__label"
                title="Full pill label verbiage mirrored here"
              >
                Pill Label 1
              </span>
              <span
                className="slds-icon_container slds-pill__remove"
                onClick={[Function]}
                role="button"
                title="Remove"
              >
                <svg
                  className="slds-icon slds-icon_x-small slds-icon-text-default"
                  style={
                    Object {
                      "cursor": "pointer",
                    }
                  }
                >
                  <use
                    href="/assets/icons/utility-sprite/svg/symbols.svg#close"
                  />
                </svg>
                <span
                  className="slds-assistive-text"
                >
                  Press delete or backspace to remove
                </span>
              </span>
            </span>
          </li>
          <li
            className="slds-listbox__item"
            role="presentation"
          >
            <span
              aria-selected="true"
              className="slds-pill"
              onBlur={[Function]}
              onClick={[Function]}
              onFocus={[Function]}
              onKeyDown={[Function]}
              role="option"
              tabIndex={-1}
            >
              <span
                className="slds-pill__label"
                title="Full pill label verbiage mirrored here"
              >
                Pill Label 2
              </span>
              <span
                className="slds-icon_container slds-pill__remove"
                onClick={[Function]}
                role="button"
                title="Remove"
              >
                <svg
                  className="slds-icon slds-icon_x-small slds-icon-text-default"
                  style={
                    Object {
                      "cursor": "pointer",
                    }
                  }
                >
                  <use
                    href="/assets/icons/utility-sprite/svg/symbols.svg#close"
                  />
                </svg>
                <span
                  className="slds-assistive-text"
                >
                  Press delete or backspace to remove
                </span>
              </span>
            </span>
          </li>
        </ul>
      </div>
    </div>
  </div>
</div>
`;

exports[`DOM snapshots SLDSPillContainer Pill Container With Avatars 1`] = `
<div
  className="slds-p-around_medium"
>
  <div>
    <div
      className="slds-p-vertical_medium"
    >
      <h3
        className="slds-text-heading_small"
      >
        Static Examples
      </h3>
    </div>
    <div
      className="slds-grid slds-grid_vertical-align-start"
    >
      <div
        className="slds-pill_container"
        id="pill-container-with-avatars-listbox-of-pill-options"
      >
        <ul
          aria-label="Selected Options:"
          aria-orientation="horizontal"
          className="slds-listbox slds-listbox_horizontal slds-p-top_xxx-small"
          role="listbox"
        >
          <li
            className="slds-listbox__item"
            role="presentation"
          >
            <span
              aria-selected="true"
              className="slds-pill"
              onBlur={[Function]}
              onClick={[Function]}
              onFocus={[Function]}
              onKeyDown={[Function]}
              role="option"
              tabIndex="0"
            >
              <span
                className="slds-pill__icon_container"
              >
                <div>
                  <span
                    className="slds-avatar slds-avatar_circle slds-avatar_medium"
                  >
                    <img
                      alt=""
                      onError={[Function]}
                      src="https://lightningdesignsystem.com/assets/images/avatar1.jpg"
                      title="User 1"
                    />
                  </span>
                </div>
              </span>
              <span
                className="slds-pill__label"
                title="Full pill label verbiage mirrored here"
              >
                Pill Label 1
              </span>
              <span
                className="slds-icon_container slds-pill__remove"
                onClick={[Function]}
                role="button"
                title="Remove"
              >
                <svg
                  className="slds-icon slds-icon_x-small slds-icon-text-default"
                  style={
                    Object {
                      "cursor": "pointer",
                    }
                  }
                >
                  <use
                    href="/assets/icons/utility-sprite/svg/symbols.svg#close"
                  />
                </svg>
                <span
                  className="slds-assistive-text"
                >
                  Press delete or backspace to remove
                </span>
              </span>
            </span>
          </li>
          <li
            className="slds-listbox__item"
            role="presentation"
          >
            <span
              aria-selected="true"
              className="slds-pill"
              onBlur={[Function]}
              onClick={[Function]}
              onFocus={[Function]}
              onKeyDown={[Function]}
              role="option"
              tabIndex={-1}
            >
              <span
                className="slds-pill__icon_container"
              >
                <div>
                  <span
                    className="slds-avatar slds-avatar_circle slds-avatar_medium"
                  >
                    <img
                      alt=""
                      onError={[Function]}
                      src="https://lightningdesignsystem.com/assets/images/avatar2.jpg"
                      title="User 2"
                    />
                  </span>
                </div>
              </span>
              <span
                className="slds-pill__label"
                title="Full pill label verbiage mirrored here"
              >
                Pill Label 2
              </span>
              <span
                className="slds-icon_container slds-pill__remove"
                onClick={[Function]}
                role="button"
                title="Remove"
              >
                <svg
                  className="slds-icon slds-icon_x-small slds-icon-text-default"
                  style={
                    Object {
                      "cursor": "pointer",
                    }
                  }
                >
                  <use
                    href="/assets/icons/utility-sprite/svg/symbols.svg#close"
                  />
                </svg>
                <span
                  className="slds-assistive-text"
                >
                  Press delete or backspace to remove
                </span>
              </span>
            </span>
          </li>
        </ul>
      </div>
    </div>
  </div>
</div>
`;

exports[`DOM snapshots SLDSPillContainer Pill Container With Icons 1`] = `
<div
  className="slds-p-around_medium"
>
  <div>
    <div
      className="slds-p-vertical_medium"
    >
      <h3
        className="slds-text-heading_small"
      >
        Static Examples
      </h3>
    </div>
    <div
      className="slds-grid slds-grid_vertical-align-start"
    >
      <div
        className="slds-pill_container"
        id="pill-container-with-icons-listbox-of-pill-options"
      >
        <ul
          aria-label="Selected Options:"
          aria-orientation="horizontal"
          className="slds-listbox slds-listbox_horizontal slds-p-top_xxx-small"
          role="listbox"
        >
          <li
            className="slds-listbox__item"
            role="presentation"
          >
            <span
              aria-selected="true"
              className="slds-pill"
              onBlur={[Function]}
              onClick={[Function]}
              onFocus={[Function]}
              onKeyDown={[Function]}
              role="option"
              tabIndex="0"
            >
              <span
                className="slds-pill__icon_container"
              >
                <span
                  className="slds-icon_container slds-icon-standard-account"
                  title="Account"
                >
                  <svg
                    aria-hidden="true"
                    className="slds-icon"
                  >
                    <use
                      href="/assets/icons/standard-sprite/svg/symbols.svg#account"
                    />
                  </svg>
                  
                </span>
              </span>
              <span
                className="slds-pill__label"
                title="Full pill label verbiage mirrored here"
              >
                Pill Label 1
              </span>
              <span
                className="slds-icon_container slds-pill__remove"
                onClick={[Function]}
                role="button"
                title="Remove"
              >
                <svg
                  className="slds-icon slds-icon_x-small slds-icon-text-default"
                  style={
                    Object {
                      "cursor": "pointer",
                    }
                  }
                >
                  <use
                    href="/assets/icons/utility-sprite/svg/symbols.svg#close"
                  />
                </svg>
                <span
                  className="slds-assistive-text"
                >
                  Press delete or backspace to remove
                </span>
              </span>
            </span>
          </li>
          <li
            className="slds-listbox__item"
            role="presentation"
          >
            <span
              aria-selected="true"
              className="slds-pill"
              onBlur={[Function]}
              onClick={[Function]}
              onFocus={[Function]}
              onKeyDown={[Function]}
              role="option"
              tabIndex={-1}
            >
              <span
                className="slds-pill__icon_container"
              >
                <span
                  className="slds-icon_container slds-icon-standard-case"
                  title="Case"
                >
                  <svg
                    aria-hidden="true"
                    className="slds-icon"
                  >
                    <use
                      href="/assets/icons/standard-sprite/svg/symbols.svg#case"
                    />
                  </svg>
                  
                </span>
              </span>
              <span
                className="slds-pill__label"
                title="Full pill label verbiage mirrored here"
              >
                Pill Label 2
              </span>
              <span
                className="slds-icon_container slds-pill__remove"
                onClick={[Function]}
                role="button"
                title="Remove"
              >
                <svg
                  className="slds-icon slds-icon_x-small slds-icon-text-default"
                  style={
                    Object {
                      "cursor": "pointer",
                    }
                  }
                >
                  <use
                    href="/assets/icons/utility-sprite/svg/symbols.svg#close"
                  />
                </svg>
                <span
                  className="slds-assistive-text"
                >
                  Press delete or backspace to remove
                </span>
              </span>
            </span>
          </li>
          <li
            className="slds-listbox__item"
            role="presentation"
          >
            <span
              aria-selected="true"
              className="slds-pill"
              onBlur={[Function]}
              onClick={[Function]}
              onFocus={[Function]}
              onKeyDown={[Function]}
              role="option"
              tabIndex={-1}
            >
              <span
                className="slds-pill__icon_container"
              >
                <span
                  title="Retweet"
                >
                  <svg
                    aria-hidden="true"
                    className="slds-icon slds-icon-text-default"
                  >
                    <use
                      href="/assets/icons/utility-sprite/svg/symbols.svg#retweet"
                    />
                  </svg>
                  
                </span>
              </span>
              <span
                className="slds-pill__label"
                title="Full pill label verbiage mirrored here"
              >
                Pill Label 3
              </span>
              <span
                className="slds-icon_container slds-pill__remove"
                onClick={[Function]}
                role="button"
                title="Remove"
              >
                <svg
                  className="slds-icon slds-icon_x-small slds-icon-text-default"
                  style={
                    Object {
                      "cursor": "pointer",
                    }
                  }
                >
                  <use
                    href="/assets/icons/utility-sprite/svg/symbols.svg#close"
                  />
                </svg>
                <span
                  className="slds-assistive-text"
                >
                  Press delete or backspace to remove
                </span>
              </span>
            </span>
          </li>
          <li
            className="slds-listbox__item"
            role="presentation"
          >
            <span
              aria-selected="true"
              className="slds-pill"
              onBlur={[Function]}
              onClick={[Function]}
              onFocus={[Function]}
              onKeyDown={[Function]}
              role="option"
              tabIndex={-1}
            >
              <span
                className="slds-pill__icon_container"
              >
                <span
                  className="slds-icon_container slds-icon-standard-solution"
                  title="Solution"
                >
                  <svg
                    aria-hidden="true"
                    className="slds-icon"
                  >
                    <use
                      href="/assets/icons/standard-sprite/svg/symbols.svg#solution"
                    />
                  </svg>
                  
                </span>
              </span>
              <span
                className="slds-pill__label"
                title="Full pill label verbiage mirrored here"
              >
                Pill Label 4
              </span>
              <span
                className="slds-icon_container slds-pill__remove"
                onClick={[Function]}
                role="button"
                title="Remove"
              >
                <svg
                  className="slds-icon slds-icon_x-small slds-icon-text-default"
                  style={
                    Object {
                      "cursor": "pointer",
                    }
                  }
                >
                  <use
                    href="/assets/icons/utility-sprite/svg/symbols.svg#close"
                  />
                </svg>
                <span
                  className="slds-assistive-text"
                >
                  Press delete or backspace to remove
                </span>
              </span>
            </span>
          </li>
          <li
            className="slds-listbox__item"
            role="presentation"
          >
            <span
              aria-selected="true"
              className="slds-pill"
              onBlur={[Function]}
              onClick={[Function]}
              onFocus={[Function]}
              onKeyDown={[Function]}
              role="option"
              tabIndex={-1}
            >
              <span
                className="slds-pill__icon_container"
              >
                <span
                  className="slds-icon_container slds-icon-standard-custom-notification"
                  title="Custom Notification"
                >
                  <svg
                    aria-hidden="true"
                    className="slds-icon"
                  >
                    <use
                      href="/assets/icons/standard-sprite/svg/symbols.svg#custom_notification"
                    />
                  </svg>
                  
                </span>
              </span>
              <span
                className="slds-pill__label"
                title="Full pill label verbiage mirrored here"
              >
                Pill Label 5
              </span>
              <span
                className="slds-icon_container slds-pill__remove"
                onClick={[Function]}
                role="button"
                title="Remove"
              >
                <svg
                  className="slds-icon slds-icon_x-small slds-icon-text-default"
                  style={
                    Object {
                      "cursor": "pointer",
                    }
                  }
                >
                  <use
                    href="/assets/icons/utility-sprite/svg/symbols.svg#close"
                  />
                </svg>
                <span
                  className="slds-assistive-text"
                >
                  Press delete or backspace to remove
                </span>
              </span>
            </span>
          </li>
          <li
            className="slds-listbox__item"
            role="presentation"
          >
            <span
              aria-selected="true"
              className="slds-pill"
              onBlur={[Function]}
              onClick={[Function]}
              onFocus={[Function]}
              onKeyDown={[Function]}
              role="option"
              tabIndex={-1}
            >
              <span
                className="slds-pill__icon_container"
              >
                <span
                  className="slds-icon_container slds-icon-standard-email"
                  title="Email"
                >
                  <svg
                    aria-hidden="true"
                    className="slds-icon"
                  >
                    <use
                      href="/assets/icons/standard-sprite/svg/symbols.svg#email"
                    />
                  </svg>
                  
                </span>
              </span>
              <span
                className="slds-pill__label"
                title="Full pill label verbiage mirrored here"
              >
                Pill Label 6
              </span>
              <span
                className="slds-icon_container slds-pill__remove"
                onClick={[Function]}
                role="button"
                title="Remove"
              >
                <svg
                  className="slds-icon slds-icon_x-small slds-icon-text-default"
                  style={
                    Object {
                      "cursor": "pointer",
                    }
                  }
                >
                  <use
                    href="/assets/icons/utility-sprite/svg/symbols.svg#close"
                  />
                </svg>
                <span
                  className="slds-assistive-text"
                >
                  Press delete or backspace to remove
                </span>
              </span>
            </span>
          </li>
          <li
            className="slds-listbox__item"
            role="presentation"
          >
            <span
              aria-selected="true"
              className="slds-pill"
              onBlur={[Function]}
              onClick={[Function]}
              onFocus={[Function]}
              onKeyDown={[Function]}
              role="option"
              tabIndex={-1}
            >
              <span
                className="slds-pill__icon_container"
              >
                <span
                  className="slds-icon_container slds-icon-standard-endorsement"
                  title="Endorsement"
                >
                  <svg
                    aria-hidden="true"
                    className="slds-icon"
                  >
                    <use
                      href="/assets/icons/standard-sprite/svg/symbols.svg#endorsement"
                    />
                  </svg>
                  
                </span>
              </span>
              <span
                className="slds-pill__label"
                title="Full pill label verbiage mirrored here"
              >
                Pill Label 7
              </span>
              <span
                className="slds-icon_container slds-pill__remove"
                onClick={[Function]}
                role="button"
                title="Remove"
              >
                <svg
                  className="slds-icon slds-icon_x-small slds-icon-text-default"
                  style={
                    Object {
                      "cursor": "pointer",
                    }
                  }
                >
                  <use
                    href="/assets/icons/utility-sprite/svg/symbols.svg#close"
                  />
                </svg>
                <span
                  className="slds-assistive-text"
                >
                  Press delete or backspace to remove
                </span>
              </span>
            </span>
          </li>
          <li
            className="slds-listbox__item"
            role="presentation"
          >
            <span
              aria-selected="true"
              className="slds-pill"
              onBlur={[Function]}
              onClick={[Function]}
              onFocus={[Function]}
              onKeyDown={[Function]}
              role="option"
              tabIndex={-1}
            >
              <span
                className="slds-pill__icon_container"
              >
                <span
                  className="slds-icon_container slds-icon-standard-recent"
                  title="Recent"
                >
                  <svg
                    aria-hidden="true"
                    className="slds-icon"
                  >
                    <use
                      href="/assets/icons/standard-sprite/svg/symbols.svg#recent"
                    />
                  </svg>
                  
                </span>
              </span>
              <span
                className="slds-pill__label"
                title="Full pill label verbiage mirrored here"
              >
                Pill Label 8
              </span>
              <span
                className="slds-icon_container slds-pill__remove"
                onClick={[Function]}
                role="button"
                title="Remove"
              >
                <svg
                  className="slds-icon slds-icon_x-small slds-icon-text-default"
                  style={
                    Object {
                      "cursor": "pointer",
                    }
                  }
                >
                  <use
                    href="/assets/icons/utility-sprite/svg/symbols.svg#close"
                  />
                </svg>
                <span
                  className="slds-assistive-text"
                >
                  Press delete or backspace to remove
                </span>
              </span>
            </span>
          </li>
          <li
            className="slds-listbox__item"
            role="presentation"
          >
            <span
              aria-selected="true"
              className="slds-pill"
              onBlur={[Function]}
              onClick={[Function]}
              onFocus={[Function]}
              onKeyDown={[Function]}
              role="option"
              tabIndex={-1}
            >
              <span
                className="slds-pill__icon_container"
              >
                <span
                  className="slds-icon_container slds-icon-custom-custom31"
                  title="Custom 31"
                >
                  <svg
                    aria-hidden="true"
                    className="slds-icon"
                  >
                    <use
                      href="/assets/icons/custom-sprite/svg/symbols.svg#custom31"
                    />
                  </svg>
                  
                </span>
              </span>
              <span
                className="slds-pill__label"
                title="Full pill label verbiage mirrored here"
              >
                Pill Label 9
              </span>
              <span
                className="slds-icon_container slds-pill__remove"
                onClick={[Function]}
                role="button"
                title="Remove"
              >
                <svg
                  className="slds-icon slds-icon_x-small slds-icon-text-default"
                  style={
                    Object {
                      "cursor": "pointer",
                    }
                  }
                >
                  <use
                    href="/assets/icons/utility-sprite/svg/symbols.svg#close"
                  />
                </svg>
                <span
                  className="slds-assistive-text"
                >
                  Press delete or backspace to remove
                </span>
              </span>
            </span>
          </li>
        </ul>
      </div>
    </div>
  </div>
</div>
`;
